@@ -20,8 +20,10 @@ import sn.symmetry.spareparts.repository.CarBrandRepository;
 import sn.symmetry.spareparts.repository.CarModelRepository;
 import sn.symmetry.spareparts.service.CarModelService;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -54,7 +56,7 @@ public class CarModelServiceImpl implements CarModelService {
         }
         return models.stream()
                 .map(carModelMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
